--- a/src/app/backOffice/match/updatematch/updatematch.component.html
+++ b/src/app/backOffice/match/updatematch/updatematch.component.html
@@ -1,5 +1,6 @@
 <h1>Mettre à jour un Match</h1>
 <form [formGroup]="matchForm" (ngSubmit)="updateMatch()">
+  <h1>Mettre à jour un Match</h1>
   <label for="nbrmitemps">Nombre Mi-Temps:</label>
   <input id="nbrmitemps" formControlName="nbrmitemps" type="number">
 
