--- a/src/app/backOffice/addAcademy/add-academy/add-academy.component.html
+++ b/src/app/backOffice/addAcademy/add-academy/add-academy.component.html
@@ -9,6 +9,8 @@
         <!-- Left Column: Form -->
         <div class="col-12 col-lg-6">
           <form #academieForm="ngForm" (ngSubmit)="addAcademie(academieForm)">
+            <h1>Ajouter Academie</h1> <!-- Titre centré dans le formulaire -->
+            
             <div class="form-outline mb-3">
               <input
                 class="form-control"
