--- a/src/app/backOffice/match/addmatch/addmatch.component.html
+++ b/src/app/backOffice/match/addmatch/addmatch.component.html
@@ -1,6 +1,10 @@
 
+<br>
+<br>
+<br>
+<br>
+<div class="container">
 
-<h1>Ajouter un Match</h1>
 
 <form [formGroup]="matchForm" (ngSubmit)="addMatch()">
   <h1>Ajouter un Match</h1> <!-- Titre centré dans le formulaire -->
@@ -34,3 +38,4 @@
 </form>
 
 
+</div>
