--- a/src/app/backOffice/side/side/side.component.html
+++ b/src/app/backOffice/side/side/side.component.html
@@ -30,6 +30,11 @@
           <i class="bi bi-person-lines-fill"></i><span>Organiser un tournoi</span>
         </a>
       </li><!-- End Tables Nav -->
+      <li class="nav-item">
+        <a href="admin/AddMatch"  class="nav-link collapsed" >
+          <i class="bi bi-person-lines-fill"></i><span>Organiser un match</span>
+        </a>
+      </li><!-- End Tables Nav -->
       
       
 
@@ -56,12 +61,7 @@
         </a>
       </li><!-- End Register Page Nav -->
 
-      <li class="nav-item">
-        <a class="nav-link collapsed" >
-          <i class="bi bi-box-arrow-in-right"></i>
-          <span>Tech News </span>
-        </a>
-      </li><!-- End Login Page Nav -->
+      
 
       
 
