--- a/src/app/backOffice/match/displaymatch/displaymatch.component.html
+++ b/src/app/backOffice/match/displaymatch/displaymatch.component.html
@@ -1,3 +1,8 @@
+<br>
+<br>
+<br>
+<br>
+<div class="container">
 <h1>Liste des Matchs</h1>
 
 <div class="match-container">
@@ -57,4 +62,5 @@
       <a [routerLink]="['/admin/details-match', match.id]">View Details</a>
     </div>
   </div>
+</div>
 </div>
