--- a/src/app/backOffice/match/updatematch/updatematch.component.html
+++ b/src/app/backOffice/match/updatematch/updatematch.component.html
@@ -1,3 +1,8 @@
+<br>
+<br>
+<br>
+<br>
+<div class="container">
 <h1>Mettre à jour un Match</h1>
 <form [formGroup]="matchForm" (ngSubmit)="updateMatch()">
   <h1>Mettre à jour un Match</h1>
@@ -21,3 +26,4 @@
 
   <button type="submit" [disabled]="matchForm.invalid">Mettre à jour</button>
 </form>
+</div>
