--- a/src/app/backOffice/side/side/side.component.html
+++ b/src/app/backOffice/side/side/side.component.html
@@ -37,7 +37,24 @@
       </li><!-- End Tables Nav -->
       
       
-
+      <li class="nav-item">
+        <a href="admin/DisplayMatches"  class="nav-link collapsed" >
+          <i class="bi bi-person-lines-fill"></i><span>Liste des matches</span>
+        </a>
+      </li><!-- End Tables Nav -->
+      
+      
+      <li class="nav-item">
+        <a href="admin/addPlayer"  class="nav-link collapsed" >
+          <i class="bi bi-person-lines-fill"></i><span>ajouter des joueurs</span>
+        </a>
+      </li><!-- End Tables Nav -->
+      
+      <li class="nav-item">
+        <a href="admin/Joueurs"  class="nav-link collapsed" >
+          <i class="bi bi-person-lines-fill"></i><span>Liste des joueurs</span>
+        </a>
+      </li><!-- End Tables Nav -->
       
 
       <li class="nav-heading">Others Features</li>
