--- a/src/app/frontOffice/natif/natif16-17/natif16-17.component.html
+++ b/src/app/frontOffice/natif/natif16-17/natif16-17.component.html
@@ -24,13 +24,8 @@
           </div>
         </div>
       </div>
-  
-      
-      
+
       <div class="container">
-        
-        
-  
         <div class="row">
           <div class="col-lg-12">
             
@@ -170,6 +165,14 @@
                       <tr>
                         <td>0</td>
                         <td><strong class="text-white">Carthage</strong></td>
+                        <td>0</td>
+                        <td>0</td>
+                        <td>0</td>
+                        <td>0</td>
+                      </tr>
+                      <tr>
+                        <td>0</td>
+                        <td><strong class="text-white"> Dream Football</strong></td>
                         <td>0</td>
                         <td>0</td>
                         <td>0</td>
@@ -338,8 +341,8 @@
                     <div class="widget-vs">
                       <div class="d-flex align-items-center justify-content-around justify-content-between w-100">
                         <div class="team-1 text-center">
-                            <img src="assets/front/logo/megrin.jpg" alt="Image">
-                          <h3>Élite megrine 2	</h3>
+                            <img src="assets/front/logo/dfa.jpg" alt="Image">
+                          <h3>Dream Football</h3>
                         </div>
                         <div>
                           <span class="vs"><span>VS</span></span>
